@@ -808,6 +808,10 @@ void play_UI_sound(const std::string& files)
 	}
 }
 
+int get_music_volume()
+{
+	return Mix_VolumeMusic(-1);
+}
 
 void set_music_volume(int vol)
 {
